[package]
name = "cyber_bunny"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
poise = "0.5.5"
regex = "1.8.2"
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.17", features = ["env-filter"]}
reqwest = "0.11.18"
openssl = { version = "0.10", features = ["vendored"] }
chrono = "0.4.24"

[dependencies.serenity]
default-features = false
features = ["builder", "model", "collector"]
version = "0.11"
